--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,13 @@ body {
     flex-direction:column;
 }
 
+#title {
+    text-align: center;
+}
+#description {
+    text-align: center;
+}
+
 form {
     background: rgb(10, 10, 49);
     color: white;
