more styles added to html and css

--- a/styles.css
+++ b/styles.css
@@ -12,10 +12,14 @@ body {
 }
 
 #title {
+    margin: auto;
+    margin-top: 20px;
+    margin-bottom: -10px;
     text-align: center;
 }
 #description {
     text-align: center;
+    margin-bottom: 25px;
 }
 
 form {
@@ -25,6 +29,21 @@ form {
     border-radius: 10px;
     width: 700px;
     margin: auto;
+}
+
+.input-headings {
+    margin: 0 auto 1.25rem auto;
+    padding: 0.25rem;
+}
+
+.form-input {
+    display: block;
+    width: 90%;
+    height: 2rem;
+    padding: 0.2rem 0.75rem;
+    background: #fff;
+    border: 1px solid #d7dcdd;
+    border-radius: 0.25rem;
 }
 
 .submit-button {
